<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Forum</string>
    <string name="app_id">534043489970951</string>
    <string name="app_settings_name">Settings</string>
    <string name="latest_threads">Senaste</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="home_desc">Home</string>
    <string name="menu_help">Help</string>
    <string name="set_preferences">set_preferences</string>
    <string name="pref_offline">Offline Mode</string>
    <string name="pref_offline_summ">Will not work, this app is online!</string>
    <string name="pref_colorsType">Colors</string>
    <string name="pref_colorsType_entries">Vet inte vad denna gör</string>
    <string name="pref_colorsType_default">1</string>
    <string name="top_bar_private">Private</string>
    <string name="top_bar_public">Public</string>
    <string name="connection_problems_text">Försök igen senare.</string>
    <string name="connection_problems_caption">Nätverksfel</string>
    <string name="ok">OK</string>
    <string name="wait_server_caption">Vänta...</string>
    <string name="wait_server_text">Kopplar upp.</string>
    <string name="login">Login</string>
    <string name="search_text">Sök</string>
    <string name="headline">Rubrik</string>
    <string name="text">Text</string>
    <string name="create">Skapa</string>
    <string name="write_reply_text">Skriv svar</string>
    <string name="write_reply_cancel_text">Tillbaka</string>
    <string name="write_reply_submit_text">Svara</string>
    <string name="register">Anslut</string>
    <string name="username">Ange användarnamn...</string>
    <string name="edit">Redigera</string>
    <string name="delete">Ta bort</string>
    <string name="forum">Forum</string>
    <string name="diary_and_notes"><![CDATA[Dagbok & anteckningar]]></string>
    <string name="select_category">Ny tråd</string>
    <string name="search">Sök</string>
    <string name="search_threads">Sök trådar</string>
    <string name="profile">Min Profil</string>
    <string name="headline_or_text_empty">Rubriken får innehålla max 35 tecken och fälten får inte vara tomma</string>
    <string name="reply_empty">Fältet får inte vara tomt</string>
    <string name="new_note">Ny Anteckning</string>
    <string name="chat">Chatt</string>
</resources>