<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include android:id="@+id/caption" layout="@layout/caption" />

    <com.hyperactivity.android_app.core.ScrollPicker
            android:id="@+id/forum_categories_surface_view"
            android:layout_width="fill_parent"
            android:layout_height="160dp"

            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <EditText
                android:id="@+id/headline_textfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/headline"
                android:singleLine="true"
                android:layout_gravity="center"/>

        <EditText
                android:id="@+id/text_textfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/text"
                android:singleLine="true"
                android:layout_gravity="center"/>


        <Button
                android:id="@+id/create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:layout_gravity="center"
                />




    </LinearLayout>



</LinearLayout>