<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/headline"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

        <ImageView
                android:id="@+id/myImageView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/logo2" />



        <TextView
        android:id="@+id/thread_headline_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" android:textColor="#000000" android:textSize="@dimen/viewThreadView_headline"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center" android:layout_alignLeft="@+id/myImageView"
        android:layout_alignBottom="@+id/myImageView"/>

    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal" android:background="@drawable/thread_background"
                  android:clickable="false" android:focusable="false"
                  android:focusableInTouchMode="false" android:padding="10dp"
                  android:layout_margin="8dp"
            >

        <ImageView
                android:id="@+id/firstPost_image"
                android:src="@drawable/ic_launcher"
                android:contentDescription="@string/home_desc"
                android:layout_width="wrap_content"
                android:paddingRight="5dp"
                android:layout_height="wrap_content" android:clickable="false"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical" android:padding="2dp">
            <TextView
                    android:id="@+id/firstPost_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/thread_text_field"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/firstPost_timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    

    
    <FrameLayout 
        android:id="@+id/reply_list_container"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    
    <LinearLayout 
        android:id="@+id/write_reply_container"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
        
        <EditText 
            android:id="@+id/write_reply_field"
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:singleLine="true"
    		android:hint="@string/write_reply_text"
    		android:inputType="textNoSuggestions"
            />
        
        <LinearLayout 
            android:id="@+id/write_reply_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible">
            
            <Button
                android:id="@+id/write_reply_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_reply_cancel_text"
                android:layout_gravity="left"/>
            
            <Button
                android:id="@+id/write_reply_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_reply_submit_text"
                android:layout_gravity="right"/>
            
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>